<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10">

            <ImageView
                android:id="@+id/im_back"
                android:layout_width="@dimen/dp36"
                android:layout_height="@dimen/dp36"
                android:layout_gravity="center"
                android:src="@drawable/ic_black" />

            <TextView
                android:id="@+id/tv_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/next"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp22" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp20"
                android:text="@string/txt_register" />

            <EditText
                android:id="@+id/edt_phone_number"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"
                android:maxLength="11"
                android:padding="@dimen/dp20" />

            <EditText
                android:id="@+id/edt_name"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="@dimen/dp20" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_verify_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:id="@+id/tv_txt_verify_phone_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp20"
                android:text="@string/txt_verify" />

            <EditText
                android:id="@+id/edt_code_verify"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/verify"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:padding="@dimen/dp20" />

            <TextView
                android:id="@+id/tv_send_code_verify_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:linksClickable="true"
                android:padding="@dimen/dp20"
                android:text="@string/resend" />
        </LinearLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/pgbar_load"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
