<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_profile"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/dp10">

            <ImageView
                android:id="@+id/im_back"
                android:layout_width="@dimen/dp36"
                android:layout_height="@dimen/dp36"
                android:layout_gravity="center"
                android:src="@drawable/ic_black" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/update"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp22" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dp10">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/dp5"
                android:src="@drawable/img_profile_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/tv_phone_number"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="Số điện thoại"
                    android:textColor="@color/color_white" />


                <EditText
                    android:id="@+id/edt_name"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:padding="@dimen/dp20" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:background="@drawable/bg_btn_logout"
            android:gravity="center"
            android:id="@+id/logout"
            android:padding="@dimen/dp10"
            android:text="@string/logout"
            android:textColor="@color/color_red" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pgbar_load"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>
