<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:padding="@dimen/dp10">

        <ImageView
            android:layout_width="@dimen/dp36"
            android:layout_height="@dimen/dp36"
            android:id="@+id/view_profile"
            android:layout_gravity="center"
            android:src="@drawable/ic_person" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/color_white"
            android:textSize="@dimen/sp20" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:background="@drawable/bg_search_to_from"
            android:orientation="vertical">

            <fragment
                android:id="@+id/find_location_from"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_grey"
                android:paddingLeft="@dimen/dp5"
                android:paddingRight="@dimen/dp5" />

            <fragment
                android:id="@+id/find_location_to"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:elevation="2dp"
            android:orientation="vertical"
            android:padding="@dimen/dp5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp5"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginRight="@dimen/dp5"
                android:background="@drawable/bg_btn_item_book"
                android:orientation="horizontal"
                android:padding="@dimen/dp5">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/ic_bike" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/dp5"
                    android:text="@string/bike"
                    android:textColor="@color/color_grey"
                    android:textSize="@dimen/sp20" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/color_grey"
                    android:paddingBottom="@dimen/dp20"
                    android:paddingTop="@dimen/dp20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/dp5"
                    android:text="@string/cost"
                    android:textColor="@color/color_red"
                    android:textSize="@dimen/sp20" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_marginRight="@dimen/dp5"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_main"
                android:elevation="2dp"
                android:gravity="center"
                android:padding="@dimen/dp10"
                android:text="@string/book"
                android:textColor="@color/color_white"
                android:textSize="@dimen/sp20" />
        </LinearLayout>


    </RelativeLayout>

</LinearLayout>
